// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal slice should return modal selector state and actions 1`] = `
{
  "Modal": {
    "closeModal": [Function],
    "modalID": undefined,
    "modalOpenState": "CLOSE",
    "onModalClose": undefined,
    "openModal": [Function],
  },
}
`;

exports[`Modal slice should return modal state on modal data set using openModal 1`] = `
{
  "closeModal": [Function],
  "modalID": "search",
  "modalOpenState": "OPEN",
  "onModalClose": [MockFunction],
  "openModal": [Function],
}
`;

exports[`Modal slice should return modal state with initial value 1`] = `
{
  "closeModal": [Function],
  "modalID": undefined,
  "modalOpenState": "CLOSE",
  "onModalClose": undefined,
  "openModal": [Function],
}
`;
